@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+07-Jan-2010 Andrew Eddie
+ ^ Removed ability to call JFilterInput statically.
+
 06-Jan-2010 Hannes Papenberg
 # Fixed default parameters in install-SQL for components
 
@@ -56,6 +59,7 @@ $ -> Language fix or change
 05-Jan-2010 Hannes Papenberg
  ^ Removed #__components and moved the admin menu information to #__menu. Thanks jonnsl!
 
+>>>>>>> .r14052
 05-Jan-2010 Andrew Eddie
  ^ Accepted [#19268] Refactoring mod_popular in the BackEnd.
  ^ Added support for layout and modal forms in JControllerForm::edit method.
